--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@message) do |f| %>
+<%= form_for(@message,html: {class: 'form-horizontal'}) do |f| %>
     <% if @message.errors.present? %>
         <div class="alert alert-danger">
             <%= alert %>
@@ -11,23 +11,34 @@
             </ul>
         </div>
     <% end %>
-
-    <div class="container-fluid">
-      <div class="form-horizontal">
-        <div class="col-md-2">
-            名前:
-        </div>  
-        <%= f.text_area :name , :class => "col-md-10", :size => "100x1" %>
-        <!-- <%= f.text_field :name , :class => "col-lg-10" %> -->
-        <br>
-        <br>
-        <div class="col-md-2">
-            内容:
+        <div class="form-group">
+            <label for="message_name" class="col-sm-2 control-label">
+                名前:
+            </label>
+            <div class="col-sm-10">
+            <%= f.text_field :name , :class => "form-control" %>
+            <!-- <%= f.text_field :name , :class => "col-lg-10" %> -->
+            </div>
         </div>
-        <%= f.text_area :body , :class => "col-md-10", :size => "100x4" %>
+        
+        <div class="form-group">
+            <label for="message_body" class="col-sm-2 control-label">
+                内容:
+            </label>
+            <div class="col-sm-10">
+                <%= f.text_area :body , :class => "form-control", :rows => "4" %>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="message_age" class="col-sm-2 control-label">
+                年齢:
+            </label>
+            <div class="col-sm-1">
+                <%= f.text_area :age , :class => "form-control", :rows => "1" %>
+            </div>
+        </div>
+   
         <div class="col-md-offset-2 col-md-10">
           <%= f.submit class: "btn btn-sm btn-primary" %>
         </div>
-      </div>
-    </div>
 <% end %>
