--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -34,7 +34,7 @@
                 年齢:
             </label>
             <div class="col-sm-1">
-                <%= f.text_area :age , :class => "form-control", :rows => "1" %>
+                <%= f.text_field :age , :class => "form-control", :rows => "1" %>
             </div>
         </div>
    
