--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,9 +2,9 @@
   <div class="panel-heading">
     メッセージ一覧
   </div>
-
   <div class="panel-body">
     <% @messages.each do |message| %>
+    <!-- <%= message.id.inspect %><br> -->
       <span class="label label-info"><%= message.name %></span>
         <%= message.body %>
         (<%= link_to "edit" , edit_message_path(message) %>
