--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -16,7 +16,7 @@
                 名前:
             </label>
             <div class="col-sm-10">
-            <%= f.text_field :name , :class => "form-control" %>
+            <%= f.text_area :name , :class => "form-control" %>
             <!-- <%= f.text_field :name , :class => "col-lg-10" %> -->
             </div>
         </div>
@@ -34,7 +34,7 @@
                 年齢:
             </label>
             <div class="col-sm-1">
-                <%= f.text_field :age , :class => "form-control", :rows => "1" %>
+                <%= f.text_area  :age , :class => "form-control", :rows => "1" %>
             </div>
         </div>
    
